small ui changes

--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -265,6 +265,8 @@
 			<br><br>
 				<button class="btn btn-secondary" (click)="extractFiltersFromJobSpec()">Perform Extraction</button>
 			<br><br>
+			<p>File types of .doc, .docx and pdf up to 1MB</p>
+			<br><br>
 		</div>
 		<div class="modal-body" *ngIf="showFilterByJonSpecFailure">
 			<p>Unfortunately it was not possible to extract filters from this file.</p>
