--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.html
@@ -9,9 +9,13 @@
 				<div>
 					<!-- Action buttons -->
 					<div class="action-buttons">
-						<button (click)="showAdd()" class="btn btn-secondary btn-listing">Add Listing</button>
+						<button (click)="showAdd()" class="btn btn-secondary btn-listing">Add Job</button>
 					</div>
 			
+					<div style="text-align:center">
+						<p>Add a job to the job board and allow candidates both within the site and outside to contact you directly.</p>
+						<p>All postings on the job board will be shared in a network of 17,000+ connections to attract as many views for your job listing as possible.</p>
+					</div>
 					<!-- Pagination -->
 					<div class="pagination-options">
 			           	<span [ngSwitch]="showNavPrev()">
