--- a/recruit-gui/src/app/suggestions/suggestions.component.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.css
@@ -361,3 +361,13 @@
 	margin-bottom:10px;
 	margin-top:5px;
 }
+
+.saved-candidate-icon-header{
+	background:#6A5ACD;
+	margin:0px;
+	font-weight:bold;
+	font-size:16px;
+	width:100%;
+	padding:5px;
+	color:white;
+}
