--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -14,6 +14,9 @@
            <a  class="dropdown-item" routerLink="/about">About</a>
         </li>
 		<li  class="li-arenella-nav-pre-login" *ngIf="!isAuthenticated()">
+           <a  class="dropdown-item" routerLink="/faq">Faq</a>
+        </li>
+		<li  class="li-arenella-nav-pre-login" *ngIf="!isAuthenticated()">
            <a  class="dropdown-item" routerLink="/suggestions">Login</a>
         </li> 
 		<li class="li-arenella-nav-pre-login li-arenella-nav-pre-signup signup-candidate" *ngIf="!isAuthenticated()">
