--- a/recruit-gui/src/app/faq/faq.component.css
+++ b/recruit-gui/src/app/faq/faq.component.css
@@ -14,8 +14,9 @@ centerdiv{
 	margin-top:20px;
 	margin-left:90px;
 	margin-right:100px;
+	margin-bottom:50px;
 }
 
 .faq h3{
-	color:#6A5ACD;
+	color:black;
 }
