--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -7,16 +7,16 @@
 	<ul class="arenella-navbar">
       
 		<!-- Pre Authentication -->
-		<li  class="li-arenella-nav-pre-login" *ngIf="!isAuthenticated()">
-           <a  class="dropdown-item" routerLink="/listing">Job Board</a>
+		<li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
+           <a  class="dropdown-item" routerLink="/listing">Jobs</a>
         </li>
-		<li  class="li-arenella-nav-pre-login" *ngIf="!isAuthenticated()">
+		<li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
            <a  class="dropdown-item" routerLink="/about">About</a>
         </li>
-		<li  class="li-arenella-nav-pre-login" *ngIf="!isAuthenticated()">
+		<li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
            <a  class="dropdown-item" routerLink="/faq">Faq</a>
         </li>
-		<li  class="li-arenella-nav-pre-login" *ngIf="!isAuthenticated()">
+		<li  class="li-arenella-nav-pre-login li-arenella-nav-pre-login-std" *ngIf="!isAuthenticated()">
            <a  class="dropdown-item" routerLink="/suggestions">Login</a>
         </li> 
 		<li class="li-arenella-nav-pre-login li-arenella-nav-pre-signup signup-candidate" *ngIf="!isAuthenticated()">
