--- a/recruit-gui/src/app/faq/faq.component.css
+++ b/recruit-gui/src/app/faq/faq.component.css
@@ -12,8 +12,8 @@ centerdiv{
 
 .faqs{
 	margin-top:20px;
-	margin-left:90px;
-	margin-right:100px;
+	margin-left:10%;
+	margin-right:10%;
 	margin-bottom:50px;
 }
 
