--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -7,7 +7,7 @@
 	        		<!-- List View -->
 	        		<div  *ngSwitchCase="'list'">
 	        		
-		        		<div class="action-buttons" *ngIf="isAuthenticated()">
+		        		<div class="action-buttons" *ngIf="isAuthenticated() && !isAuthenticatedAsAdmin()">
 							<button class="btn btn-secondary btn-listing" routerLink="/recruiter-listings">Manage Your Posts</button>
 						</div>
 	        		
