--- a/recruit-gui/src/app/listing/listing.component.css
+++ b/recruit-gui/src/app/listing/listing.component.css
@@ -79,7 +79,7 @@
 
 .action-buttons{
 	text-align:right;
-	margin-right:40px;
+	margin-right:0px;
 }
 
 .btnRight{
@@ -186,4 +186,47 @@
 
 .hide-url{
 	cursor:default;
+}
+
+.contact-recruiter-textarea{
+	width:100%;
+	height:200px;
+}
+
+.email-label{
+	border-bottom:2px solid black;
+	margin-top:10px;
+}
+
+.email-input{
+	min-width:33%;
+}
+
+.feedbackBox{
+    width:200px;
+    height:350px;
+}
+
+.modal-title{
+	margin-left:20px;
+}
+
+.modal-header{
+     background:#181414;
+     color:#6A5ACD;
+     font-weight:bold;
+ }
+
+.filter-close-box{
+	padding:10px;
+	cursor:pointer;
+	font-size:20px;
+	font-weight: bold;
+	text-align: right;
+}
+
+.modal-body{
+    font-size: large;
+    height:200px;
+    text-align: center;
 }
