--- a/recruit/src/main/resources/templates/styles.css
+++ b/recruit/src/main/resources/templates/styles.css
@@ -1,20 +1,25 @@
-<style type="text/css">
-	table{
-		width:100%;
-	}
-	
-	th{
-		background:black;
-		color:white;
-	}
-	
-	td{
-		text-align:left;
-		padding-left:5px;
-		border-bottom:1px solid grey;
-	}
-	
-	.td-centered{
-		text-align:center;
-	}
-</style>
+table{
+	width:100%;
+}
+
+th{
+	background:black;
+	color:white;
+}
+
+td{
+	text-align:left;
+	padding-left:5px;
+	border-bottom:1px solid grey;
+}
+
+.td-centered{
+	text-align:center;
+}
+
+.disclaimer{
+	font-size:12px;
+	color:orange;
+	font-style:italic;
+	width:80%;
+}
